# demo-python

./: README.md  pyproject.toml  requirements.txt
public/: index.html
src/: __init__.py  auth.py  server.py
